[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["caiquemiranda <caiquemirandas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
motor = "^3.6.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
pre-commit = "^4.0.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
